uploading tableau twbx

--- a/Temporary/Project2_scrape.ipynb
+++ b/Temporary/Project2_scrape.ipynb
@@ -146,66 +146,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       address              agent days           neighborhood  \\\n",
-      "0     9827 Golden Prairie Lane   Isaias Contreras    6   NorthWest Park place   \n",
-      "1         6035 Cascadera Drive      Phuong Nguyen   35   NorthWest Park place   \n",
-      "2         10110 Fallmont Court    Alexander Ebner    8   NorthWest Park place   \n",
-      "3           5822 Wickover Lane   Ruben Villarreal    5   NorthWest Park place   \n",
-      "4     12035 Lismore Lake Drive    Mitchell Haynes   55   lismore lake estates   \n",
-      "5     12151 Lismore Lake Drive    Jennifer Ciulla   44   lismore lake estates   \n",
-      "6        11918 Galentine Point      Amjad Mushtaq  175   lismore lake estates   \n",
-      "7       13910 Springmint Drive         John Prell    5  lakewood oaks estates   \n",
-      "8           13718 Pegasus Road           Young Le   23  lakewood oaks estates   \n",
-      "9           13511 Pegasus Road    Teresa Goralski   29  lakewood oaks estates   \n",
-      "10      13106 Springmint Court       Evan Compean  115  lakewood oaks estates   \n",
-      "11        14011 Pegasus Circle      Mark Raisbeck  213  lakewood oaks estates   \n",
-      "12          13618 Pegasus Road  Stephanie Martens    9  lakewood oaks estates   \n",
-      "13     11207 Barker West Drive   Darrell Anderson  129             Riata West   \n",
-      "14     10923 Barker View Drive     Jimmy Franklin   18             Riata West   \n",
-      "15     10902 Barker View Drive     Claudia Ocadiz    2             Riata West   \n",
-      "16    17923 Cypress Side Drive     Cameron Namazi   27             Riata West   \n",
-      "17    17951 Branch Creek Drive     Candice Harris   12             Riata West   \n",
-      "18  18030 Riata Crossing Drive      Cesar Ramirez   80             Riata West   \n",
-      "19     10915 Barker View Drive      Alian Johnson    4             Riata West   \n",
-      "20    11115 Riata Canyon Drive    Allison Fontana    1             Riata West   \n",
-      "21     16810 Saddle Ridge Pass   William Phillips   16   Saddle Ridge Estates   \n",
-      "22     17203 Saddle Ridge Pass       Clint Nabors  164   Saddle Ridge Estates   \n",
-      "23     16510 Saddle Ridge Pass      Sharon Vaughn  134   Saddle Ridge Estates   \n",
-      "24     16703 Saddle Ridge Pass       Mark Bonning   27   Saddle Ridge Estates   \n",
+      "                          address              agent days  \\\n",
+      "0            10110 Fallmont Court    Alexander Ebner    8   \n",
+      "1        12035 Lismore Lake Drive    Mitchell Haynes   62   \n",
+      "2        11843 Lismore Lake Drive       Edward Roehm   52   \n",
+      "3        12151 Lismore Lake Drive    Jennifer Ciulla   82   \n",
+      "4              13718 Pegasus Road           Young Le   61   \n",
+      "5           13614 Gainesway Drive  Stephanie Martens   28   \n",
+      "6              13511 Pegasus Road    Teresa Goralski   67   \n",
+      "7          13106 Springmint Court       Evan Compean  153   \n",
+      "8   13802 Copeland Oaks Boulevard   Carolyn Williams   11   \n",
+      "9   13518 Copeland Oaks Boulevard   Anthony Levinson   14   \n",
+      "10           14011 Pegasus Circle      Mark Raisbeck  251   \n",
+      "11             13618 Pegasus Road  Stephanie Martens   32   \n",
+      "12             13614 Pegasus Road    Ronnie Matthews   33   \n",
+      "13        11207 Barker West Drive    Frank Monacelli  167   \n",
+      "14        10923 Barker View Drive     Jimmy Franklin   48   \n",
+      "15       17951 Branch Creek Drive     Candice Harris   43   \n",
+      "16     18030 Riata Crossing Drive      Cesar Ramirez   80   \n",
+      "17        16810 Saddle Ridge Pass   William Phillips   54   \n",
+      "18        17203 Saddle Ridge Pass       Clint Nabors  169   \n",
+      "19        16703 Saddle Ridge Pass       Mark Bonning   27   \n",
       "\n",
-      "                                               office     price  \n",
-      "0                           Keller Williams Signature    195000  \n",
-      "1                                BlueRoof Real Estate    195000  \n",
-      "2   Coldwell Banker United, Realtors - Bellaire Of...    170000  \n",
-      "3                                    RE/MAX Integrity    169990  \n",
-      "4                                           BuyBroker    349900  \n",
-      "5                              RE/MAX Fine Properties    329900  \n",
-      "6                                          Fast Homes    289900  \n",
-      "7                                    Creekview Realty    615000  \n",
-      "8                           Texas Independence Realty    529000  \n",
-      "9    Better Homes and Gardens Real Estate Gary Greene    499500  \n",
-      "10                        Champions Real Estate Group    499500  \n",
-      "11                            RE/MAX Elite Properties    465000  \n",
-      "12   Better Homes and Gardens Real Estate Gary Greene    450000  \n",
-      "13                                    Nino Properties    298799  \n",
-      "14                                     eXp Realty LLC    225000  \n",
-      "15                              Blake Richards Realty    224900  \n",
-      "16                                      Summit Realty    224500  \n",
-      "17                                   CA Modern Realty    198500  \n",
-      "18                                         Vylla Home    189900  \n",
-      "19                        Champions Real Estate Group    179999  \n",
-      "20                                Texas Realty Select    179900  \n",
-      "21                           John Daugherty, Realtors   4999500  \n",
-      "22   Better Homes and Gardens Real Estate Gary Greene   2150000  \n",
-      "23                                    Zuri Properties   1997000  \n",
-      "24                                Bonning Real Estate   1258000  \n"
+      "             neighborhood                                             office  \\\n",
+      "0    NorthWest Park place  Coldwell Banker United, Realtors - Bellaire Of...   \n",
+      "1    lismore lake estates                                          BuyBroker   \n",
+      "2    lismore lake estates   Better Homes and Gardens Real Estate Gary Greene   \n",
+      "3    lismore lake estates                             RE/MAX Fine Properties   \n",
+      "4   lakewood oaks estates                          Texas Independence Realty   \n",
+      "5   lakewood oaks estates   Better Homes and Gardens Real Estate Gary Greene   \n",
+      "6   lakewood oaks estates   Better Homes and Gardens Real Estate Gary Greene   \n",
+      "7   lakewood oaks estates                        Champions Real Estate Group   \n",
+      "8   lakewood oaks estates                           Keller Williams Platinum   \n",
+      "9   lakewood oaks estates  Better Homes and Gardens Real Estate Gary Gree...   \n",
+      "10  lakewood oaks estates                            RE/MAX Elite Properties   \n",
+      "11  lakewood oaks estates   Better Homes and Gardens Real Estate Gary Greene   \n",
+      "12  lakewood oaks estates                                     RE/MAX Legends   \n",
+      "13             Riata West                                    Nino Properties   \n",
+      "14             Riata West                                     eXp Realty LLC   \n",
+      "15             Riata West                                   CA Modern Realty   \n",
+      "16             Riata West                                         Vylla Home   \n",
+      "17   Saddle Ridge Estates                           John Daugherty, Realtors   \n",
+      "18   Saddle Ridge Estates   Better Homes and Gardens Real Estate Gary Greene   \n",
+      "19   Saddle Ridge Estates                                Bonning Real Estate   \n",
+      "\n",
+      "       price  \n",
+      "0     170000  \n",
+      "1     349900  \n",
+      "2     345000  \n",
+      "3     329900  \n",
+      "4     519000  \n",
+      "5     500000  \n",
+      "6     489500  \n",
+      "7     485000  \n",
+      "8     484900  \n",
+      "9     470000  \n",
+      "10    460000  \n",
+      "11    450000  \n",
+      "12    415000  \n",
+      "13    279488  \n",
+      "14    219000  \n",
+      "15    198500  \n",
+      "16    189900  \n",
+      "17   4999500  \n",
+      "18   2150000  \n",
+      "19   1258000  \n"
      ]
     }
    ],
@@ -252,8 +264,8 @@
     "        home_details['neighborhood'] = homes['neighborhood']['subdivisions']\n",
     "        resultset.append(home_details)                                   \n",
     "                                           \n",
-    "# info = pd.DataFrame(resultset)\n",
-    "# print(info)\n",
+    "info = pd.DataFrame(resultset)\n",
+    "print(info)\n",
     "                                           "
    ]
   },
