--- a/Temporary/Untitled1.ipynb
+++ b/Temporary/Untitled1.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-26-04aeca45f847>, line 73)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-04aeca45f847>\"\u001b[0;36m, line \u001b[0;32m73\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No results given for https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\n",
+      "[{'neighborhood': 'riverwood estates', 'address': '12403 Swan River Drive', 'days': '6', 'agent': 'Juan Miranda', 'office': 'Mission Realty', 'price': '18000'}, {'neighborhood': 'forest shadows', 'address': '4706 Broadmark Lane', 'days': '13', 'agent': 'Cellina Stokes', 'office': 'Crowne Realty', 'price': '175000'}, {'neighborhood': 'aldine estates', 'address': '15202 Claypool Street', 'days': '58', 'agent': 'Rosa Gonzalez', 'office': 'REALM Real Estate Professionals - North Houston', 'price': '774000'}, {'neighborhood': 'greenbranch', 'address': '1430 Old Greens Road', 'days': '6', 'agent': 'Rose Nava', 'office': 'JEA Properties', 'price': '135000'}, {'neighborhood': 'castlewood', 'address': '2517 Woodgate Street', 'days': '56', 'agent': 'Gina Lopez', 'office': 'Loft Realty', 'price': '225000'}]\n"
      ]
     }
    ],
@@ -23,17 +23,13 @@
     "from pprint import pprint\n",
     "from urllib import parse\n",
     "import re \n",
-    "# import schedule\n",
-    "# import threading \n",
     "\n",
-    "\n",
-    "# def har_homes():\n",
     "urls = [\"https://www.har.com/riverwood-estates/homes-for-sale/2377?sort=listdate+desc\",\n",
-    "        \"https://www.har.com/forest-shadows/homes-for-sale/4585?sort=listdate+desc\",\n",
-    "        \"https://www.har.com/aldine-estates/homes-for-sale/1917?sort=listdate+desc\",\n",
-    "        \"https://www.har.com/greenbranch/homes-for-sale/1921?sort=listdate+desc\",\n",
-    "        \"https://www.har.com/castlewood/homes-for-sale/2078?sort=listdate+desc\",\n",
-    "        \"https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\"]\n",
+    "            \"https://www.har.com/forest-shadows/homes-for-sale/4585?sort=listdate+desc\",\n",
+    "           \"https://www.har.com/aldine-estates/homes-for-sale/1917?sort=listdate+desc\",\n",
+    "           \"https://www.har.com/greenbranch/homes-for-sale/1921?sort=listdate+desc\",\n",
+    "           \"https://www.har.com/castlewood/homes-for-sale/2078?sort=listdate+desc\",\n",
+    "           \"https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\"]\n",
     "\n",
     "all_homes = []\n",
     "\n",
@@ -50,7 +46,6 @@
     "        all_info = soup.find('div', class_= 'mpi_info') \n",
     "        price = soup.find('div', class_= 'mpi_img')\n",
     "        home_info['address']= all_info.findAll('span', class_= 'bold')[0].text\n",
-    "        home_info['address2']= all_info.find('a').get_text()\n",
     "        home_info['days']= all_info.findAll('span', class_= 'bold')[1].text\n",
     "        home_info['agent'] = all_info.findAll('a', class_='bold')[0].text\n",
     "        home_info['office'] = all_info.findAll('a', class_= 'bold')[1].text\n",
@@ -59,35 +54,8 @@
     "    except:\n",
     "        print(\"No results given for \" + url)\n",
     "        continue\n",
-    "        \n",
-    "print(home_info['address']\n",
     "            \n",
-    "# return all_homes\n",
-    "\n",
-    "# print(home_info['address2'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "#     print(all_homes)\n",
-    "\n",
-    "\n",
-    "# def threader(job_func):\n",
-    "#     job_thread = threading.Thread(target=job_func)\n",
-    "#     job_thread.start()\n",
-    "\n",
-    "# schedule.every().seconds.do(threader, scrape)\n",
-    "\n",
-    "# def main():    \n",
-    "#     schedule.run_pending()\n",
-    "#     time.sleep(1)\n",
-    "\n",
-    "\n",
-    " \n",
-    "\n",
-    "\n",
-    "\n",
-    "            \n",
-    "\n"
+    "print(all_homes)"
    ]
   },
   {
