--- a/Temporary/Lesly's scrape.ipynb
+++ b/Temporary/Lesly's scrape.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No results given for https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\n",
-      "[{'neighborhood': 'riverwood estates', 'address': '12403 Swan River Drive', 'days': '6', 'agent': 'Juan Miranda', 'office': 'Mission Realty', 'price': '18000'}, {'neighborhood': 'forest shadows', 'address': '4706 Broadmark Lane', 'days': '13', 'agent': 'Cellina Stokes', 'office': 'Crowne Realty', 'price': '175000'}, {'neighborhood': 'aldine estates', 'address': '15202 Claypool Street', 'days': '58', 'agent': 'Rosa Gonzalez', 'office': 'REALM Real Estate Professionals - North Houston', 'price': '774000'}, {'neighborhood': 'greenbranch', 'address': '1430 Old Greens Road', 'days': '6', 'agent': 'Rose Nava', 'office': 'JEA Properties', 'price': '135000'}, {'neighborhood': 'castlewood', 'address': '2517 Woodgate Street', 'days': '56', 'agent': 'Gina Lopez', 'office': 'Loft Realty', 'price': '225000'}]\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-127-35c0f82c8631>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-127-35c0f82c8631>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    urls = [\"https://www.har.com/riverwood-estates/homes-for-sale/2377?sort=listdate+desc\",\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
