updated tableau 2 html

--- a/Temporary/New scrape multiple homes-Copy1.ipynb
+++ b/Temporary/New scrape multiple homes-Copy1.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'neighborhood': 'forest shadows', 'address': '4706 Broadmark Lane', 'city': 'Humble', 'state': 'TX', 'zip': '77338', 'days': '15', 'agent': 'Cellina Stokes', 'office': 'Crowne Realty'}\n",
-      "{'neighborhood': 'forest shadows', 'address': '4602 Fieldwick Lane', 'city': 'Humble', 'state': 'TX', 'zip': '77338', 'days': '29', 'agent': 'Michael Thiltgen', 'office': 'Greenbriar Real Estate Service'}\n",
-      "{'neighborhood': 'forest shadows', 'address': '21802 Pine Cone Drive', 'city': 'Humble', 'state': 'TX', 'zip': '77338', 'days': '34', 'agent': 'Katherine Ware', 'office': 'Irie Properties, LLC'}\n",
-      "{'neighborhood': 'forest shadows', 'address': '4503 Clairfield Lane', 'city': 'Humble', 'state': 'TX', 'zip': '77338', 'days': '71', 'agent': 'Rick Raymor', 'office': 'RE/MAX Professional Group     '}\n",
-      "[]\n"
+      "['\\n\\n\\n\\xa0\\n\\n\\n\\n\\n\\n\\n  175000   \\nFor Sale\\n\\n\\n\\n\\n', '\\n\\n\\n\\xa0\\n\\n\\n\\n\\n\\n\\n  189900   \\nFor Sale\\n\\n\\n\\n\\n', '\\n\\n\\n\\xa0\\n\\n\\n\\n\\n\\n\\n  249450   \\nFor Sale\\n\\n\\n\\n\\n', '\\n\\n\\n\\xa0\\n\\n\\n\\n\\n\\n\\n  264500   \\nFor Sale\\n\\n\\n\\n\\n']\n"
      ]
     }
    ],
@@ -29,7 +25,7 @@
     "from datetime import datetime\n",
     "import schedule\n",
     "import threading \n",
-    "from task import homes_comparison\n",
+    "# from task import homes_comparison\n",
     "import csv\n",
     "\n",
     "\n",
@@ -59,17 +55,15 @@
     "            home_info['days']= info.findAll('span', class_= 'bold')[1].text\n",
     "            home_info['agent'] = info.findAll('a', class_='bold')[0].text\n",
     "            home_info['office'] =info.findAll('a', class_= 'bold')[1].text\n",
-    "            print(home_info)\n",
-    "            \n",
-    "            \n",
-    "#         price =[img.text.replace(',','').replace('$','').strip() for img in soup.findAll(class_= 'mpi_img')]\n",
-    "#         home_info['price']= price \n",
+    "#             print(home_info)\n",
+    "            price =[img.text.replace(',','').replace('$','').strip('') for img in soup.findAll(class_= 'mpi_img')]\n",
+    "            home_info['price']= price\n",
     "    except:\n",
     "        print(\"No results given for \" + url)\n",
     "        continue\n",
     "    \n",
     " \n",
-    "    print(all_homes)\n",
+    "    print(home_info['price'])\n",
     "\n",
     "#     with open('scraped_homes.csv', 'w', encoding='utf8', newline='') as output_file:\n",
     "#         fc = csv.DictWriter(output_file, \n",
