--- a/txt_task.ipynb
+++ b/txt_task.ipynb
@@ -2,9 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    address             agent     city days    neighborhood  \\\n",
+      "0  21807 Forest Glade Drive      Jodi Manfred   Humble   24  forest shadows   \n",
+      "1       4706 Broadmark Lane    Cellina Stokes   Humble   66  forest shadows   \n",
+      "2       4602 Fieldwick Lane  Michael Thiltgen   Humble   80  forest shadows   \n",
+      "3     21802 Pine Cone Drive    Katherine Ware   Humble   81  forest shadows   \n",
+      "4      4503 Clairfield Lane       Rick Raymor   Humble  122  forest shadows   \n",
+      "5                       NaN               NaN      NaN  NaN             NaN   \n",
+      "6     15202 Claypool Street     Rosa Gonzalez  Houston  111  aldine estates   \n",
+      "7                       NaN               NaN      NaN  NaN             NaN   \n",
+      "\n",
+      "                                            office   price state    zip  \\\n",
+      "0                                       JLA Realty  171500    TX  77338   \n",
+      "1                                    Crowne Realty  189900    TX  77338   \n",
+      "2                   Greenbriar Real Estate Service  239900    TX  77338   \n",
+      "3                             Irie Properties, LLC  259500    TX  77338   \n",
+      "4                                 RE/MAX Universal     NaN    TX  77338   \n",
+      "5                                              NaN  199000   NaN    NaN   \n",
+      "6  REALM Real Estate Professionals - North Houston     NaN    TX  77032   \n",
+      "7                                              NaN  650000   NaN    NaN   \n",
+      "\n",
+      "                    datetime  \n",
+      "0 2019-07-08 20:25:59.309478  \n",
+      "1 2019-07-08 20:25:59.309478  \n",
+      "2 2019-07-08 20:25:59.309478  \n",
+      "3 2019-07-08 20:25:59.309478  \n",
+      "4 2019-07-08 20:25:59.309478  \n",
+      "5 2019-07-08 20:25:59.309478  \n",
+      "6 2019-07-08 20:25:59.309478  \n",
+      "7 2019-07-08 20:25:59.309478  \n"
+     ]
+    }
+   ],
    "source": [
     "#import dependencies and the web scraping code from scrape.py\n",
     "from sqlalchemy import create_engine\n",
@@ -40,7 +76,9 @@
     "    \n",
     "homesdf['datetime'] = datetime.now()\n",
     "\n",
-    "homesdf.to_csv('data.csv', index = False)\n",
+    "print(homesdf)\n",
+    "\n",
+    "# homesdf.to_csv('data.csv', index = False)\n",
     "\n",
     "#RUN THE QUERY AND GET THE ADDRESS FROM THE SQL DATABASE AS A LIST THEN GRAB THE ADDRESS FORM THE SCRAPED DATA AS A LIST THEN \n",
     "#FIND THE INDEX OF THE LIST OF ADDRESS FROM THE PANDAS DATAFRAME FOR WHICH THERE ARE NO MATCHES IN SQL \n",
